Ajout du workflow CI - Correction HTML

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
-<head><title>Lab CYDOPS</title></head>
+ <head><title>Lab CYDOPS</title></head>
 <body>
-<h1>Mise en œuvre CI/CD </h1>
-<p>Site cydops</p>
+ <h1>Mise en œuvre CI/CD </h1>
+ <p>Site cydops</p>
 </body>
 </html>
